--- a/style_img.css
+++ b/style_img.css
@@ -1,10 +1,12 @@
 /*url para la parte de las imagenes*/
 @import url('http://use.frontawesome.com/releases/v6.4.2/.css/all.css');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 .container {
     position: relative;
     width: 500px;
@@ -12,6 +14,7 @@
     background-color: #099ecf;
     box-shadow: 0 30px 50px #099ecf;
 }
+
 .container .slide .item {
     width: 165px;
     height: 250;
@@ -30,7 +33,7 @@
 .slide .item:nth-child(2) {
     top: 0;
     left: 0;
-    transform: translate(0,0);
+    transform: translate(0, 0);
     border-radius: 0;
     width: 100%;
     height: 100%;
@@ -80,7 +83,7 @@
     animation: animate 1s ease-in-out 0.3s forwards;
 }
 
-.content .button{
+.content .button {
     padding: 10px 20px;
     border: none;
     cursor: pointer;
@@ -89,11 +92,12 @@
 }
 
 @keyframes animate {
-    from{
+    from {
         opacity: 0;
         transform: translate(0, 100px);
         filter: blur(33px);
     }
+
     to {
         opacity: 1;
         transform: translate(0);
@@ -103,7 +107,7 @@
 
 .button {
     width: 100%;
-    text-align:center;
+    text-align: center;
     position: absolute;
     bottom: 20px;
 }
@@ -119,7 +123,7 @@
     transition: 0.3s;
 }
 
-.button button:hover{
+.button button:hover {
     background: #099ecf;
-    color: #505050;   
+    color: #505050;
 }
