--- a/style_img.css
+++ b/style_img.css
@@ -64,7 +64,7 @@
     left: 100px;
     width: 300px;
     text-align: left;
-    color: #099ecf;
+    color: #dd00ff;
     transform: translate(0, 50%);
     font-family: system-ui;
     display: none;
@@ -83,16 +83,19 @@
 }
 
 .content .desc {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 7px;
+    margin-bottom: 15px;
     opacity: 0;
     animation: animate 1s ease-in-out 0.3s forwards;
 }
 
-.content .button {
+.content button {
     padding: 10px 20px;
+    border-radius: 8px;
     border: none;
     cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid #505050;
     opacity: 0;
     animation: animate 1s ease-in-out 0.6s forwards;
 }
