--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
       h3 {
         font-size: 24px; /* Tamaño de letra mediano para el tercer nivel de encabezado */
       }
-      h4, li {
+      h4, li, div {
         font-size: 20px; /* Tamaño de letra mediano para el cuarto nivel de encabezado */
         text-align: justify;
       }
